--- a/Logistic Regression Model.ipynb
+++ b/Logistic Regression Model.ipynb
@@ -670,7 +670,7 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error, confusion_matrix\n",
+    "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error, confusion_matrix, classification_report\n",
     "r2_score(y_test,y_pred)"
    ]
   },
@@ -731,6 +731,32 @@
    "source": [
     "cm = confusion_matrix(y_test,y_pred)\n",
     "print(cm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.90      0.94      0.92        79\n",
+      "           1       0.87      0.80      0.84        41\n",
+      "\n",
+      "    accuracy                           0.89       120\n",
+      "   macro avg       0.89      0.87      0.88       120\n",
+      "weighted avg       0.89      0.89      0.89       120\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cr = classification_report(y_test,y_pred)\n",
+    "print(cr)"
    ]
   }
  ],
